--- a/dashboard-diego/index.html
+++ b/dashboard-diego/index.html
@@ -101,7 +101,7 @@
                     "¿Mi día y MI VIDA va hacia mi libertad y mi mejor versión, o solo reacciono a estímulos externos?"
                 </h1>
                 <p class="text-stone-600 text-lg">
-                    Este sistema no es solo una lista de tareas. Es la arquitectura de tu éxito inevitable.
+                    Este sistema no es solo una lista de tareas. Es la arquitectura del éxito inevitable.
                 </p>
             </div>
         </section>
